Layout bug fix for BCN-48.

--- a/src/embedded-bcn/style.less
+++ b/src/embedded-bcn/style.less
@@ -393,6 +393,11 @@ a.dropdown-item:focus {
 */
 
 @media only screen and (max-width: 992px) {
+
+    #right_column {
+        display: none;
+    }
+    
     .toggle-right-column {
         display: none;
     }
